--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,14 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Cars</h1>
+<h1><%= @title %></h1>
 
 <div id="cars">
-  <% @cars.each do |car| %>
-    <%= render car %>
-    <p>
-      <%= link_to "Show this car", car %>
-    </p>
-  <% end %>
+  <%= render @cars || 'There are no cars available.' %>
 </div>
 
 <%= link_to "New car", new_car_path %>
