--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MyFirstRailsApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Title</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
